--- a/cryptography.ipynb
+++ b/cryptography.ipynb
@@ -13,10 +13,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 1: An Introduction to Cryptography"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IBXFEPAQLBQAAXWQWIBXFSVAXW\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create substitution table (message -> ciphertext)\n",
+    "e = \"SCJAXUFBQKTPRWEZHVLIGYDNMO\"\n",
+    "encrypt = {}\n",
+    "i = 0\n",
+    "for i in range(len(e)):\n",
+    "    encrypt[chr(ord('a') + i)] = e[i]\n",
+    "\n",
+    "# Encrypt the plaintext message\n",
+    "message = \"The gold is hidden in the garden\"\n",
+    "ciphertext = \"\"\n",
+    "for x in message:\n",
+    "    if x == ' ': continue\n",
+    "    else: ciphertext += encrypt[x.lower()]\n",
+    "print(ciphertext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cipher</th>\n",
+       "      <th>Message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>w</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E</td>\n",
+       "      <td>o</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>F</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>G</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>H</td>\n",
+       "      <td>q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>I</td>\n",
+       "      <td>t</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>J</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>K</td>\n",
+       "      <td>j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>L</td>\n",
+       "      <td>s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>M</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>N</td>\n",
+       "      <td>x</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>O</td>\n",
+       "      <td>z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>P</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Q</td>\n",
+       "      <td>i</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>R</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>S</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>T</td>\n",
+       "      <td>k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>U</td>\n",
+       "      <td>f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>V</td>\n",
+       "      <td>r</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>W</td>\n",
+       "      <td>n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>X</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Y</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Z</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Cipher Message\n",
+       "0       A       d\n",
+       "1       B       h\n",
+       "2       C       b\n",
+       "3       D       w\n",
+       "4       E       o\n",
+       "5       F       g\n",
+       "6       G       u\n",
+       "7       H       q\n",
+       "8       I       t\n",
+       "9       J       c\n",
+       "10      K       j\n",
+       "11      L       s\n",
+       "12      M       y\n",
+       "13      N       x\n",
+       "14      O       z\n",
+       "15      P       l\n",
+       "16      Q       i\n",
+       "17      R       m\n",
+       "18      S       a\n",
+       "19      T       k\n",
+       "20      U       f\n",
+       "21      V       r\n",
+       "22      W       n\n",
+       "23      X       e\n",
+       "24      Y       v\n",
+       "25      Z       p"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create substitution table (ciphertext -> message)\n",
+    "decrypt = {}\n",
+    "i = 0\n",
+    "for i in range(len(e)):\n",
+    "    decrypt[e[i]] = chr(ord('a') + i)\n",
+    "\n",
+    "# Print decryption table\n",
+    "decryption_table = np.array([['Cipher', 'Message']])\n",
+    "for i in range(len(e)):\n",
+    "    tmp = np.array([[chr(ord('A') + i), decrypt[chr(ord('A') + i)]]])\n",
+    "    decryption_table = np.append(decryption_table, tmp, axis = 0)\n",
+    "decryption_table = pd.DataFrame(data = decryption_table[1:, :], columns = decryption_table[0, :])\n",
+    "decryption_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thesecretpasswordisswordfish\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciphertext = \"IBXLX JVXIZ SLLDE VAQLL DEVAU QLB\"\n",
+    "message = \"\"\n",
+    "for x in ciphertext:\n",
+    "    if x == ' ': continue\n",
+    "    else: message += decrypt[x]\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{(a) If a | b and b | c, then a | c}$\n",
+    "\n",
+    "$a | b \\Leftrightarrow b=k_1a$\n",
+    "\n",
+    "$b|c\\Leftrightarrow c=k_2b=k_1k_2a \\Rightarrow a|c$\n",
+    "\n",
+    "$\\textbf{(b) If a | b and b | a, then a = ±b}$\n",
+    "\n",
+    "$a | b \\Leftrightarrow b=k_1a$\n",
+    "\n",
+    "$b|a\\Leftrightarrow a=k_2b=k_1k_2a \\Rightarrow k_1k_2=1$\n",
+    "\n",
+    "$k_1,k_2\\in\\mathbb{Z} \\Rightarrow k_1=k_2=1 \\text{ }or\\text{ } k_1=k_2=-1$\n",
+    "\n",
+    "$\\Rightarrow a=\\pm b$\n",
+    "\n",
+    "$\\textbf{(c) If a | b and a | c, then a | (b + c) and a | (b − c)}$\n",
+    "\n",
+    "$a | b \\Leftrightarrow b=k_1a$\n",
+    "\n",
+    "$a|c\\Leftrightarrow c=k_2a \\Rightarrow b+c=a(k_1+k_2) \\Rightarrow a|(b+c)$\n",
+    "\n",
+    "$also \\text{ } b-c=a(k_1-k_2) \\Rightarrow a|(b-c)$\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.11"
+   ]
   }
  ],
  "metadata": {
@@ -26,7 +363,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4,
