--- a/cryptography.ipynb
+++ b/cryptography.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "This is my solution for some exercises when I was studying *Introduction to Cryptography* course, everyone can refer and edit if you see something wrong ^^\n",
     "\n",
-    "The book is going to used: ***An Introduction to Mathematical Cryptography***"
+    "The book that I used: ***An Introduction to Mathematical Cryptography***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -336,23 +336,47 @@
     "\n",
     "$a|c\\Leftrightarrow c=k_2a \\Rightarrow b+c=a(k_1+k_2) \\Rightarrow a|(b+c)$\n",
     "\n",
-    "$also \\text{ } b-c=a(k_1-k_2) \\Rightarrow a|(b-c)$\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "$$\n",
-    "\n",
-    "$$"
+    "$also \\text{ } b-c=a(k_1-k_2) \\Rightarrow a|(b-c)$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.11"
+    "#### 1.11\n",
+    "\n",
+    "(a) Theo thuật toán Euler mở rộng ta có $au+bv=gcd(a,b)$ với mọi a, b $\\in\\mathbb{Z}$\n",
+    "\n",
+    "$\\Rightarrow gcd(a,b)=1$\n",
+    "\n",
+    "(b) Cho $a=b=3$ ta có\n",
+    "$3*u+3*v=6 \\Leftrightarrow u=v=2k (Counterexample)$\n",
+    "\n",
+    "$gcd(a, b) = 2$ hay $gcd(a, b) = 3$\n",
+    "\n",
+    "(c) Ta có $au_1+bv_1=1$ và $au_2+bv_2=1$\n",
+    "\n",
+    "$\\Rightarrow a*(u_2-u_1)+b*(v_2-v_1)=0$ $\\forall a, b$\n",
+    "\n",
+    "$\\Rightarrow a | b*(v_2-v_1)$ $\\forall a, b$\n",
+    "\n",
+    "$\\Rightarrow a | (v_2-v_1)$\n",
+    "\n",
+    "Ta chứng minh tương tự cho $b|(u_2-u_1)$\n",
+    "\n",
+    "(d) Ta có $a*u+b*v=g \\Rightarrow (a/g)*u+(b/g)*v=1$\n",
+    "\n",
+    "$\\Rightarrow a'=(a/g)|(v_1-v_0)$ && $b'=(b/g)|(u_1-u_0)$ (từ câu (c), ta giả sử nghiệm tiếp theo có dạng $(u_1,v_1)$)\n",
+    "\n",
+    "$\\Rightarrow v_1-v_0=k_1*a'$ và $u_1-u_0=k_2*b'$\n",
+    "\n",
+    "$\\Rightarrow a*u_1+b*v_1=a*u_0+a*(b/g)*k_2+b*v_0+b*k_1*(a/g)$\n",
+    "\n",
+    "$\\Rightarrow a*u_1+b*v_1=(a*u_0+b*v_0)+(a*b/g)*(k_2 + k_1)$\n",
+    "\n",
+    "$\\Rightarrow g=g+(a*b/g)*(k_2 + k_1) \\Rightarrow (a*b/g)*(k_2 + k_1)=0 \\Rightarrow k_1=-k_2$\n",
+    "\n",
+    "$\\Rightarrow v_1 = v_0 - k*a/g$ và $u_1=u_0+k*b/g$"
    ]
   }
  ],
