--- a/cryptography.ipynb
+++ b/cryptography.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -345,14 +345,12 @@
    "source": [
     "#### 1.11\n",
     "\n",
-    "(a) Theo thuật toán Euler mở rộng ta có $au+bv=gcd(a,b)$ với mọi a, b $\\in\\mathbb{Z}$\n",
-    "\n",
-    "$\\Rightarrow gcd(a,b)=1$\n",
+    "(a) Theo thuật toán Euler mở rộng ta có $au+bv=gcd(a,b)$ với mọi a, b $\\in\\mathbb{Z}$ $\\Rightarrow gcd(a,b)=1$\n",
     "\n",
     "(b) Cho $a=b=3$ ta có\n",
-    "$3*u+3*v=6 \\Leftrightarrow u=v=2k (Counterexample)$\n",
+    "$3*u+3*v=6 \\Leftrightarrow u+v=2 (Counter-example)$ vì $gcd(a,b)=3$ vẫn có nghiệm\n",
     "\n",
-    "$gcd(a, b) = 2$ hay $gcd(a, b) = 3$\n",
+    "Các giá trị có thể có của $gcd(a,b)$: $gcd(a, b) = 2$ hay $gcd(a, b) = 3$\n",
     "\n",
     "(c) Ta có $au_1+bv_1=1$ và $au_2+bv_2=1$\n",
     "\n",
@@ -366,7 +364,7 @@
     "\n",
     "(d) Ta có $a*u+b*v=g \\Rightarrow (a/g)*u+(b/g)*v=1$\n",
     "\n",
-    "$\\Rightarrow a'=(a/g)|(v_1-v_0)$ && $b'=(b/g)|(u_1-u_0)$ (từ câu (c), ta giả sử nghiệm tiếp theo có dạng $(u_1,v_1)$)\n",
+    "$\\Rightarrow a'=(a/g)|(v_1-v_0)$ và $b'=(b/g)|(u_1-u_0)$ (từ câu (c), ta giả sử nghiệm tiếp theo có dạng $(u_1,v_1)$)\n",
     "\n",
     "$\\Rightarrow v_1-v_0=k_1*a'$ và $u_1-u_0=k_2*b'$\n",
     "\n",
