--- a/cryptography.ipynb
+++ b/cryptography.ipynb
@@ -347,10 +347,11 @@
     "\n",
     "(a) Theo thuật toán Euler mở rộng ta có $au+bv=gcd(a,b)$ với mọi a, b $\\in\\mathbb{Z}$ $\\Rightarrow gcd(a,b)=1$\n",
     "\n",
-    "(b) Cho $a=b=3$ ta có\n",
-    "$3*u+3*v=6 \\Leftrightarrow u+v=2 (Counter-example)$ vì $gcd(a,b)=3$ vẫn có nghiệm\n",
+    "(b) Cho $a=b=3$, có $3*u+3*v=6 \\Leftrightarrow u+v=2$ (Counter-example) vì $gcd(a,b)=3$ vẫn có nghiệm\n",
     "\n",
-    "Các giá trị có thể có của $gcd(a,b)$: $gcd(a, b) = 2$ hay $gcd(a, b) = 3$\n",
+    "Các giá trị có thể có của $gcd(a,b)$: $gcd(a, b) = 1$ hay $gcd(a, b) = 2$ hay $gcd(a, b) = 3$ hay $gcd(a, b) = 6$\n",
+    "\n",
+    "Hay nói tổng quát hơn, là ước của $gcd(a,b)$\n",
     "\n",
     "(c) Ta có $au_1+bv_1=1$ và $au_2+bv_2=1$\n",
     "\n",
@@ -358,7 +359,7 @@
     "\n",
     "$\\Rightarrow a | b*(v_2-v_1)$ $\\forall a, b$\n",
     "\n",
-    "$\\Rightarrow a | (v_2-v_1)$\n",
+    "$\\Rightarrow a | (v_2-v_1)$ do $gcd(a,b)=1$\n",
     "\n",
     "Ta chứng minh tương tự cho $b|(u_2-u_1)$\n",
     "\n",
@@ -375,6 +376,46 @@
     "$\\Rightarrow g=g+(a*b/g)*(k_2 + k_1) \\Rightarrow (a*b/g)*(k_2 + k_1)=0 \\Rightarrow k_1=-k_2$\n",
     "\n",
     "$\\Rightarrow v_1 = v_0 - k*a/g$ và $u_1=u_0+k*b/g$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.14\n",
+    "\n",
+    "(a) Chứng minh $a_1\\pm b_1 \\equiv a_2\\pm b_2$ $(mod$ $m)$\n",
+    "\n",
+    "$a_1\\equiv a_2$ $(mod$ $m)$ $\\Rightarrow a_1=d_1*m+a_2$\n",
+    "\n",
+    "$b_1\\equiv b_2$ $(mod$ $m)$ $\\Rightarrow b_1=d_2*m+b_2$\n",
+    "\n",
+    "$\\Rightarrow a_1 \\pm b_1=m*(d_1\\pm d_2)+(a_2\\pm b_2) \\Rightarrow a_1\\pm b_1\\equiv a_2\\pm b_2$ $(mod$ $m)$\n",
+    "\n",
+    "(b) Chứng minh $a_1*b_1\\equiv a_2*b_2$ $(mod$ $m)$\n",
+    "\n",
+    "Có $a_1*b_1=(d_1*d_2*m+d_1*b_2+d_2*a_2)*m+(a_2*b_2)$ $\\Rightarrow$ $a_1*b_1\\equiv a_2*b_2$ $(mod$ $m)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.18\n",
+    "\n",
+    "Nếu $a=b\\Rightarrow$ $g^a\\equiv 1$ $(mod$ $m)$ $\\Leftrightarrow g^{gcd(a,b)}\\equiv g^{gcd(a,a)}\\equiv g^a\\equiv 1$ $(mod$ $m)$\n",
+    "\n",
+    "Nếu $a\\neq b$, không mất tính tổng quát ta giả sử $a < b$\n",
+    "\n",
+    "Ta có $g^b\\equiv g^a \\equiv g^{a*q+r_0}\\equiv g^{r_0} \\equiv 1$ $(mod$ $m)$\n",
+    "\n",
+    "Nhận xét rằng phương trình đồng dư trên khá giống với cách xây dựng thuật toán Euclid tìm ước chung lớn nhất\n",
+    "\n",
+    "Thật vậy ta có $gcd(b,a)=gcd(a,r_0)=gcd(r_0,r_1)=...=g(r_n, 0)=r_n$ với $r_{i-1} = q_i*r_i+r_{i+1}$\n",
+    "\n",
+    "và ta cũng chứng minh được $g^b \\equiv g^{a*q+r_0}\\equiv g^{r_0} \\equiv g^a \\equiv g^{r_0*q_0+r_1}\\equiv g^{r_1}\\equiv 1$ $(mod$ $m)$\n",
+    "\n",
+    "$\\Rightarrow g^{r_n}\\equiv 1 \\equiv g^{gcd(a,b)}$ $(mod$ $m)$"
    ]
   }
  ],
