--- a/cryptography.ipynb
+++ b/cryptography.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -416,6 +416,107 @@
     "và ta cũng chứng minh được $g^b \\equiv g^{a*q+r_0}\\equiv g^{r_0} \\equiv g^a \\equiv g^{r_0*q_0+r_1}\\equiv g^{r_1}\\equiv 1$ $(mod$ $m)$\n",
     "\n",
     "$\\Rightarrow g^{r_n}\\equiv 1 \\equiv g^{gcd(a,b)}$ $(mod$ $m)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.20\n",
+    "\n",
+    "$\\phi (m)$ là số lượng các số từ $1$ đến $m-1$ mà nguyên tố cùng nhau với $m\\Leftrightarrow gcd(a,m)=1;$ $a \\in [1,m-1]$\n",
+    "\n",
+    "Ta dễ dàng chứng minh được nếu $m$ là số nguyên tố thì $gcd(a,m)=1$ $\\forall a \\in [1,m-1]$\n",
+    "\n",
+    "Thật vậy, nếu ta biểu diễn phân tích của $a$ và $m$ thì nó sẽ có dạng như sau (với $a<m$)\n",
+    "\n",
+    "- $a = \\prod_{i=1}^t{p_i}^{k_i}$\n",
+    "\n",
+    "- $m = p$\n",
+    "\n",
+    "Do $a<m\\Rightarrow p_i<p$ $\\forall p_i \\Rightarrow gcd(a,m)=1$ $\\forall a \\in [1,m-1] \\Rightarrow \\phi (m) = m - 1$ nếu m là số nguyên tố"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.21\n",
+    "\n",
+    "(a) m lẻ $\\Rightarrow m=2k+1 \\Rightarrow m \\geq 3 \\Rightarrow m \\leq 2m-3<2m$\n",
+    "\n",
+    "Đặt số cần tìm là $a$ $(1 \\leq a \\leq m - 1) \\Rightarrow a \\equiv 2^{-1}$ $(mod$ $m)$\n",
+    "\n",
+    "$\\Leftrightarrow 2a \\equiv 1$ $(mod$ $m) \\Rightarrow m$ | $(2a - 1)$\n",
+    "\n",
+    "mà $0m < 1 \\leq 2a-1 \\leq 2m-3 < 2m \\Rightarrow m=2a-1\\Rightarrow a = \\displaystyle\\frac{m+1}{2}$\n",
+    "\n",
+    "(b) $m \\equiv 1$ $(mod$ $b)$ $\\Rightarrow m=bk+1 \\Rightarrow m \\geq b+1 \\Rightarrow (b-1)m \\leq b(m-1)-1 < bm$\n",
+    "\n",
+    "Đặt số cần tìm là $a$ $(1 \\leq a \\leq m - 1) \\Rightarrow a \\equiv b^{-1}$ $(mod$ $m)$\n",
+    "\n",
+    "$\\Leftrightarrow ba \\equiv 1$ $(mod$ $m) \\Rightarrow m$ | $(ba - 1)$\n",
+    "\n",
+    "mà $0m < 1 \\leq ba-1 \\leq b(m-1)-1 < bm \\Rightarrow km=ba-1\\Rightarrow a = \\displaystyle\\frac{km+1}{b}$ $\\forall k \\in [1, b-1]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.23\n",
+    "\n",
+    "(a) $x \\equiv 3$ $(mod$ $7)$ $\\Rightarrow x = 7k_1+3$\n",
+    "\n",
+    "$7k_1+3 \\equiv 4$ $(mod$ $9)$ $\\Rightarrow k_1 \\equiv 7^{-1}$ $(mod$ $9)$\n",
+    "\n",
+    "Có $7*4\\equiv 1$ $(mod$ $9)$ $\\Rightarrow 7^{-1}\\equiv 4$ trong $\\mathbb{Z}_9$ $\\Rightarrow k_1 \\equiv 4$ $(mod$ $9)$ $\\Rightarrow k_1=9k+4$ $\\forall k \\in \\mathbb{Z}$\n",
+    "\n",
+    "Vậy $x=7(9k+4)+3=63k+31$ $\\forall k \\in \\mathbb{Z}$\n",
+    "\n",
+    "(b) $x \\equiv 13$ $(mod$ $71)$ $\\Rightarrow x = 71k_1+13$\n",
+    "\n",
+    "$71k_1+13 \\equiv 41$ $(mod$ $97)$ $\\Rightarrow k_1 \\equiv 28*71^{-1}$ $(mod$ $97)$\n",
+    "\n",
+    "Có $71*41\\equiv 1$ $(mod$ $97)$ $\\Rightarrow 71^{-1}\\equiv 41$ trong $\\mathbb{Z}_{97}$ $\\Rightarrow k_1 \\equiv 81$ $(mod$ $97)$ $\\Rightarrow k_1=97k+81$ $\\forall k \\in \\mathbb{Z}$\n",
+    "\n",
+    "Vậy $x=71(97k+81)+13=6887k+5764$ $\\forall k \\in \\mathbb{Z}$\n",
+    "\n",
+    "(c) $x \\equiv 4$ $(mod$ $7)$ $\\Rightarrow x = 7k_1+4$\n",
+    "\n",
+    "$7k_1+4 \\equiv 5$ $(mod$ $8)$ $\\Rightarrow k_1 \\equiv 7^{-1}$ $(mod$ $8)$\n",
+    "\n",
+    "Có $7*7\\equiv 1$ $(mod$ $8)$ $\\Rightarrow 7^{-1}\\equiv 7$ trong $\\mathbb{Z}_8$ $\\Rightarrow k_1 \\equiv 7$ $(mod$ $8)$ $\\Rightarrow k_1=8k-1$ $\\forall k \\in \\mathbb{Z}$ $\\Rightarrow x=7k_1+4=7(8k-1)+4=56k-3$ $\\forall k \\in \\mathbb{Z}$\n",
+    "\n",
+    "$56k-3 \\equiv 11$ $(mod$ $15)$ $\\Rightarrow k \\equiv 14*11^{-1}$ $(mod$ $15)$\n",
+    "\n",
+    "Có $11*11\\equiv 1$ $(mod$ $15)$ $\\Rightarrow 11^{-1}\\equiv 11$ trong $\\mathbb{Z}_{15}$ $\\Rightarrow k \\equiv 4$ $(mod$ $15)$ $\\Rightarrow k=15t+4$ $\\forall t \\in \\mathbb{Z}$\n",
+    "\n",
+    "Vậy $x=56(15t+4)-3=840t+221$ $\\forall t \\in \\mathbb{Z}$\n",
+    "\n",
+    "(d) $x \\equiv a$ $(mod$ $m)$ $\\Rightarrow x = m*k_1+a$\n",
+    "\n",
+    "$m*k_1+a \\equiv b$ $(mod$ $n)$ $\\Rightarrow k_1 \\equiv (b-a)*m^{-1}$ $(mod$ $n)$\n",
+    "\n",
+    "Do $gcd(m,n)=1\\Rightarrow \\exists m^{-1}=c$ trong $\\mathbb{Z}_n \\Rightarrow k_1=k*n+(b-a)*c$\n",
+    "\n",
+    "$\\Rightarrow x=m*(k*n+(b-a)*c)+a=k*m*n+m*c*(b-a)+a$ $\\forall k \\in \\mathbb{Z}$\n",
+    "\n",
+    "Nếu không có $gcd(m,n)=1\\Rightarrow$ không tìm được nghịch đảo modulo thì không tính tiếp được nữa\n",
+    "\n",
+    "*Ví dụ*: $x \\equiv 2$ $(mod$ $4)$ và $x \\equiv 3$ $(mod$ $6)$\n",
+    "\n",
+    "$x \\equiv 2$ $(mod$ $4)$ $\\Rightarrow x=4k_1+2$\n",
+    "\n",
+    "$4k_1+2 \\equiv 3$ $(mod$ $6)$ $\\Rightarrow k_1 \\equiv 4^{-1}$ $(mod$ $6)$\n",
+    "\n",
+    "Ta lập bảng để xét đẳng thức $4*z$ $(mod$ $6)$ với $z \\in \\mathbb{Z}_6^*$\n",
+    "\n",
+    "| $z$      |  1|2|3|4|5|\n",
+    "| ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |\n",
+    "| $4*z$ $(mod$ $6)$ | 4 | 2 | 0 | 4 | 2 |\n",
+    "\n",
+    "Suy ra $4^{-1}$ không khả nghịch trong $\\mathbb{Z}_6$"
    ]
   }
  ],
