--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -4,16 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction to Cryptography - 20CNTThuc - HCMUS\n",
-    "\n",
-    "This is my solution for some exercises when I was studying *Introduction to Cryptography* course, everyone can refer and edit if you see something wrong ^^\n",
-    "\n",
-    "The book that I used: ***An Introduction to Mathematical Cryptography***"
+    "#### Chapter 1: An Introduction to Cryptography"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,19 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chapter 1: An Introduction to Cryptography"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 1.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +249,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -517,6 +506,48 @@
     "| $4*z$ $(mod$ $6)$ | 4 | 2 | 0 | 4 | 2 |\n",
     "\n",
     "Suy ra $4^{-1}$ không khả nghịch trong $\\mathbb{Z}_6$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.26\n",
+    "\n",
+    "Đặt $\\mathbb{S}=\\{p_1,p_2,...,p_r\\}$ và $N=p_1p_2...p_r+1$\n",
+    "\n",
+    "$\\Rightarrow N \\equiv 1$ $(mod$ $p_i)$ $\\forall p_i \\in \\mathbb{S}$\n",
+    "\n",
+    "$\\Rightarrow N$ là số nguyên tố hoặc $N$ có thể phân tích bởi các số nguyên tố nằm ngoài tập $\\mathbb{S}$ (nếu ở trong tập $\\mathbb{S}$ thì $N \\equiv 0$ $(mod$ $p_i)$ vô lý với điều vừa được suy ra trên)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.29\n",
+    "\n",
+    "(a) Đặt $ord_p(a)=t_1$ và $ord_p(b)=t_2$\n",
+    "\n",
+    "$\\Rightarrow a = p^{t_1}*K_1; b=p^{t_2}*K_2$ với $K_1, K_2$ là 2 số không chia hết cho $p$ được nữa\n",
+    "\n",
+    "$\\Rightarrow ab=p^{t_1+t_2}*K_1*K_2\\Rightarrow ord_p(ab)=t_1+t_2=ord_p(a)+ord_p(b)$\n",
+    "\n",
+    "(b) + (c) Đặt $ord_p(a)=t_1$ và $ord_p(b)=t_2$\n",
+    "\n",
+    "$\\Rightarrow a = p^{t_1}*K_1; b=p^{t_2}*K_2$ với $K_1, K_2$ là 2 số không chia hết cho $p$ được nữa\n",
+    "\n",
+    "Không mất tính tổng quát, giả sử $min\\{ord_p(a),ord_p(b)\\}=ord_p(a) \\Rightarrow t_1 \\leq t_2$\n",
+    "\n",
+    "$\\Rightarrow a+b=p^{t_1}*(K_1+p^{t_2-t_1}*K_2)$\n",
+    "\n",
+    "Do $p$ $|$ $p^{t_2-t_1}*K_2$ và $p \\nmid K_1$ $\\Rightarrow ord_p(a+b)=t_1=min\\{ord_p(a),ord_p(b)\\}$\n",
+    "\n",
+    "Nếu $t_1=t_2$, do cả $K_1$ và $K_2$ đều không chia hết cho $p$ nên tồn tại khả năng $K_1+K_2$ chia hết cho $p$ \n",
+    "\n",
+    "$\\Rightarrow ord_p(a+b)\\geq min\\{ord_p(a),ord_p(b)\\}$ nếu $ord_p(a) = ord_p(b)$\n",
+    "\n",
+    "$ ord_p(a+b)= min\\{ord_p(a),ord_p(b)\\}$ nếu $ord_p(a) \\neq ord_p(b)$"
    ]
   }
  ],
