--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import math"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +250,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -548,6 +549,140 @@
     "$\\Rightarrow ord_p(a+b)\\geq min\\{ord_p(a),ord_p(b)\\}$ nếu $ord_p(a) = ord_p(b)$\n",
     "\n",
     "$ ord_p(a+b)= min\\{ord_p(a),ord_p(b)\\}$ nếu $ord_p(a) \\neq ord_p(b)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.32\n",
+    "\n",
+    "(a) $p=13$ và $p=19$\n",
+    "\n",
+    "(b) $p=5$; $p=7$ và $p=17$\n",
+    "\n",
+    "(c) $p=23\\Rightarrow g=5$\n",
+    "\n",
+    " $p=29\\Rightarrow g=2$\n",
+    "\n",
+    "  $p=41\\Rightarrow g=6$\n",
+    "\n",
+    "   $p=43\\Rightarrow g=3$\n",
+    "\n",
+    "(d) Tất cả căn nguyên thuỷ modulo 11 là 2, 6, 7, 8\n",
+    "\n",
+    "Ta có $\\phi (10) =\\phi(2)\\phi(5)=1*4=4$ bằng với số lượng căn nguyên thuỷ modulo 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 10, 23, 24, 28, 29, 31, 35, 38, 39, 40, 41, 47, 50, 59, 63, 65, 66, 67, 69, 72, 73, 74, 77, 79, 87, 90, 92, 96, 98, 102, 105, 110, 112, 113, 116, 117, 119, 124, 127, 131, 133, 137, 139, 142, 150, 152, 155, 156, 157, 160, 162, 163, 164, 166, 170, 179, 182, 188, 189, 190, 191, 194, 198, 200, 201, 205, 206, 219, 222, 223]\n",
+      "Accept\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 229\n",
+    "\n",
+    "def checkPrimitiveRoot(g, p):\n",
+    "    a = []\n",
+    "    for i in range(p):\n",
+    "        if (g ** i) % p not in a: a.append(g ** i)\n",
+    "    if len(a) == p - 1: return True\n",
+    "    return False\n",
+    "\n",
+    "def checkPrime(n):\n",
+    "    if n < 2: return False\n",
+    "    if n == 2: return True\n",
+    "    for i in range(3, int(math.sqrt(n)) + 1, 2):\n",
+    "        if n % i == 0: return False\n",
+    "    return True\n",
+    "\n",
+    "def listPrimes(n):\n",
+    "    res = []\n",
+    "    for i in range(0, n + 1):\n",
+    "        if checkPrime(i) == True: res.append(i)\n",
+    "    return res\n",
+    "\n",
+    "def valuePhi(n):\n",
+    "    factor = []\n",
+    "    pr = listPrimes(n)\n",
+    "    res = n\n",
+    "    i = 0\n",
+    "    while n != 1:\n",
+    "        if n % pr[i] == 0:\n",
+    "            factor.append(pr[i])\n",
+    "            while n % pr[i] == 0:\n",
+    "                n /= pr[i]\n",
+    "        i += 1\n",
+    "    for x in factor:\n",
+    "        res = res * (x - 1) / x\n",
+    "    return res\n",
+    "\n",
+    "# (e)\n",
+    "primitive_root = []\n",
+    "for g in range(2, p):\n",
+    "    if checkPrimitiveRoot(g, p) == True: primitive_root.append(g)\n",
+    "\n",
+    "print(primitive_root)\n",
+    "if valuePhi(p - 1) == len(primitive_root): print(\"Accept\")\n",
+    "else: print(\"Reject\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 11, 13, 19, 29, 37, 53, 59, 61, 67, 83]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (f)\n",
+    "prime = listPrimes(99)\n",
+    "res = []\n",
+    "for x in prime:\n",
+    "    if checkPrimitiveRoot(2, x) == True: res.append(x)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 7, 17, 19, 29, 31, 43, 53, 79, 89]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (g)\n",
+    "res_3 = []\n",
+    "for x in prime:\n",
+    "    if checkPrimitiveRoot(3, x) == True: res_3.append(x)\n",
+    "print(res_3)\n",
+    "\n",
+    "res_4 = []\n",
+    "for x in prime:\n",
+    "    if checkPrimitiveRoot(4, x) == True: res_4.append(x)\n",
+    "print(res_4)"
    ]
   }
  ],
