--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -683,6 +683,71 @@
     "for x in prime:\n",
     "    if checkPrimitiveRoot(4, x) == True: res_4.append(x)\n",
     "print(res_4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.34\n",
+    "\n",
+    "(a) Cho $p$ là số nguyên tố lẻ và $b$ thoả $p\\nmid b$\n",
+    "\n",
+    "Ta chứng minh phương trình $x^2\\equiv b$ $(mod$ $p)$ có nhiều nhất 2 nghiệm\n",
+    "\n",
+    "Do $b$ có căn bậc 2 nên $a^2=b\\Rightarrow (x-a)(x+a)\\equiv 0$ $(mod$ $p)$ (Dễ thấy, nếu $b$ không có căn bậc 2 thì phương trình trên sẽ vô nghiệm)\n",
+    "\n",
+    "$\\Rightarrow x \\equiv \\pm a$ $(mod$ $p)$ (do p là số nguyên tố nên $p = p * 1$ mà không phân tích được thêm nữa)\n",
+    "\n",
+    "Nếu phương trình trên có 1 nghiệm $\\Rightarrow a=0\\Rightarrow p\\mid x \\Rightarrow p\\mid x^2 \\Rightarrow p \\mid b$ (vô lý với giả thuyết)\n",
+    "\n",
+    "Vậy phương trình có 2 nghiệm hoặc không có nghiệm\n",
+    "\n",
+    "*Nếu p = 2* thì chỉ có 1 kết quả duy nhất là *b = 1* $\\Rightarrow$ Có nghiệm duy nhất là $x=1$\n",
+    "\n",
+    "Nếu $p \\mid b\\Rightarrow p \\mid x\\Rightarrow x = kp$ $\\forall k \\in \\mathbb{Z}$\n",
+    "\n",
+    "(b) $(p,b)=(7,2)\\Rightarrow x^2\\equiv 2$ $(mod$ $7)$\n",
+    "\n",
+    "Theo định lý Fermat nhỏ ta có $x^6 \\equiv 1$ (mod 7)\n",
+    "\n",
+    "$\\Rightarrow x^3 \\equiv 1$ (mod 7) hay $x^3 \\equiv 6$ (mod 7)\n",
+    "\n",
+    "Do $x^2\\equiv 2$ $(mod$ $7)$ $\\Rightarrow x^{-2}\\equiv 2^{-1} \\equiv 4$ (mod 7)\n",
+    "\n",
+    "$\\Rightarrow x=4$ hay $x=3$ modulo 7\n",
+    "\n",
+    "$(p,b)=(11,5)\\Rightarrow x^2 \\equiv 5$ (mod 11)\n",
+    "\n",
+    "Theo định lý Fermat nhỏ ta có $x^{10} \\equiv 1$ (mod 11)\n",
+    "\n",
+    "$\\Rightarrow x^5 \\equiv 1$ (mod 11) hay $x^5 \\equiv 10$ (mod 11)\n",
+    "\n",
+    "Do $x^4\\equiv 3$ $(mod$ $11)$ $\\Rightarrow x^{-4}\\equiv 3^{-1} \\equiv 4$ (mod 11)\n",
+    "\n",
+    "$\\Rightarrow x=4$ hay $x=7$ modulo 11\n",
+    "\n",
+    "$(p,b)=(11,7)\\Rightarrow x^2 \\equiv 7$ (mod 11)\n",
+    "\n",
+    "Theo định lý Fermat nhỏ ta có $x^{10} \\equiv 1$ (mod 11)\n",
+    "\n",
+    "$\\Rightarrow x^5 \\equiv 1$ (mod 11) hay $x^5 \\equiv 10$ (mod 11)\n",
+    "\n",
+    "Do $x^4\\equiv 5$ $(mod$ $11)$ $\\Rightarrow x^{-4}\\equiv 5^{-1} \\equiv 9$ (mod 11)\n",
+    "\n",
+    "$\\Rightarrow x=9$ hay $x=2$ modulo 11\n",
+    "\n",
+    "$(p,b)=(37,3)\\Rightarrow x^2 \\equiv 3$ (mod 37)\n",
+    "\n",
+    "Theo định lý Fermat nhỏ ta có $x^{36} \\equiv 1$ (mod 37)\n",
+    "\n",
+    "$\\Rightarrow x^{18} \\equiv 36$ (mod 37) $\\Rightarrow (x^9-6)(x^9+6) \\equiv 0$ (mod 37) $\\Rightarrow x^9 \\equiv 6$ (mod 37) hay $x^9 \\equiv 31$ (mod 37)\n",
+    "\n",
+    "Do $x^8\\equiv 7$ $(mod$ $37)$ $\\Rightarrow x^{-8}\\equiv 7^{-1} \\equiv 16$ (mod 37)\n",
+    "\n",
+    "$\\Rightarrow x=22$ hay $x=15$ modulo 37\n",
+    "\n",
+    "(c) $x^2\\equiv 29$ (mod 35)"
    ]
   }
  ],
