--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -737,6 +737,8 @@
     "\n",
     "$\\Rightarrow x=9$ hay $x=2$ modulo 11\n",
     "\n",
+    "Thử lại ban đầu ta thấy không thoả $\\Rightarrow$ Phương trình không có nghiệm\n",
+    "\n",
     "$(p,b)=(37,3)\\Rightarrow x^2 \\equiv 3$ (mod 37)\n",
     "\n",
     "Theo định lý Fermat nhỏ ta có $x^{36} \\equiv 1$ (mod 37)\n",
@@ -747,7 +749,32 @@
     "\n",
     "$\\Rightarrow x=22$ hay $x=15$ modulo 37\n",
     "\n",
-    "(c) $x^2\\equiv 29$ (mod 35)"
+    "(c) $x^2\\equiv 29$ (mod 35) $\\Rightarrow x=8, 13, 22, 27$\n",
+    "\n",
+    "Nó không mâu thuẫn với a vì $35$ không phải là số nguyên tố\n",
+    "\n",
+    "(d) $p$ là số nguyên tố lẻ, $g$ là căn nguyên thuỷ modulo $p$. Có $a\\equiv g^k$ (mod p)\n",
+    "\n",
+    "Ta chứng minh chiều xuôi: $a$ có square root $\\Rightarrow$ $k$ chẵn\n",
+    "\n",
+    "$a$ có square root $\\Rightarrow a = b^2 = g^k \\Rightarrow b^{p-1}=g^{k*\\frac{p-1}{2}}$\n",
+    "\n",
+    "Do $b^{p-1}\\equiv 1$ (mod p) $\\Rightarrow g^{k*\\frac{p-1}{2}} \\equiv 1$ (mod p) $\\Rightarrow g^{(p-1)*\\frac{k}{2}} \\equiv 1$ (mod p)\n",
+    "\n",
+    "Và theo định lý Fermat nhỏ ta có $g^{p-1}\\equiv1$ (mod p) $\\Rightarrow k$ chẵn\n",
+    "\n",
+    "Chứng minh chiều ngược: $k$ chẵn $\\Rightarrow$ $a$ có square root\n",
+    "\n",
+    "$a=g^k=(g^{k/2})^2=B^2$ do $k$ chẵn $\\Rightarrow a$ có square root "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.38\n",
+    "\n",
+    "Answer: ifmusicbethefoodofloveplayon"
    ]
   }
  ],
