--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -775,6 +775,19 @@
     "#### 1.38\n",
     "\n",
     "Answer: ifmusicbethefoodofloveplayon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.46\n",
+    "\n",
+    "Nhắc lại về *chosen plaintext attack*: Cho một hoặc nhiều cặp $(m_i,c_i)$ thì sẽ khó để giải mã bất kì ciphertext $c$ nào không được cho trong danh sách trên mà không có thông tin của khoá $k$\n",
+    "\n",
+    "Với hệ mã như đề bài cung cấp, giả sử ta có 1 cặp $(m_0, c_0)$ thoả $c_0=k\\oplus m_0$ và đang có cipher c cần được giải mã $\\Rightarrow c_0 \\oplus c = m_0 \\oplus k \\oplus m \\oplus k=m_0\\oplus m\\Rightarrow m=c_0\\oplus c\\oplus m_0 \\Rightarrow$ **not secure against a chosen plaintext attack**, do ta biết được $m_0, c_0$ và $c$\n",
+    "\n",
+    "$c= 1001010001010111, m = 0010010000101100 \\Rightarrow k = c \\oplus m = 1011000001111011$"
    ]
   }
  ],
