--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -366,6 +366,55 @@
     "$\\Rightarrow g=g+(a*b/g)*(k_2 + k_1) \\Rightarrow (a*b/g)*(k_2 + k_1)=0 \\Rightarrow k_1=-k_2$\n",
     "\n",
     "$\\Rightarrow v_1 = v_0 - k*a/g$ và $u_1=u_0+k*b/g$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bezout_algorithm(a, b):\n",
+    "    u = 1; g = a; x = 0; y = b\n",
+    "    while y != 0:\n",
+    "        q = int(g / y)\n",
+    "        t = g % y\n",
+    "        s = u - q * x\n",
+    "        u = x; g = y\n",
+    "        x = s; y = t\n",
+    "    v = (g - a * u) / b\n",
+    "    return (g, u, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(17, -31, 13.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bezout_algorithm(527, 1258))"
    ]
   },
   {
@@ -576,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
