--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -9,10 +9,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### 2.3"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Do g là căn nguyên thuỷ của trường $\\mathbb{F}_p$ nên $ord(g) = p - 1$ $\\rightarrow x \\equiv log_g(h)$ $(mod$ $p-1)$ (mọi phần tử $x \\in \\mathbb{F}_p$ đều cho ra một giá trị $g^x$ duy nhất trong $\\mathbb{F}_p$)\n",
+    "\n",
+    "Do $x=a$ và $x=b$ nên $x\\equiv a \\equiv b \\equiv log_g(h)$ $(mod $ $p-1)$\n",
+    "\n",
+    "Ánh xạ được định nghĩa tốt là vì nếu giả sử tồn tại $a \\equiv b$ $(mod$ $p-1)$ thoả $g^a \\neq g^b$ $(mod$ $p)$ làm cho ánh xạ không được định nghĩa tốt thì ta có thể suy ra được $a \\equiv b \\equiv log_g(h)$ $(mod $ $p-1)$ như chứng minh ở trên và $g^a\\equiv g^b$ $(mod$ $p)$ (vô lí với điều ta đang giả sử)\n",
+    "\n",
+    "(b) Đặt $x_1=log_g(h_1)$ và $x_2=log_g(h_2)$ $\\rightarrow x_1+x_2=log_g(h_1)+log_g(h_2)=log_g(h_1h_2)$\n",
+    "\n",
+    "Với $h_1, h_2 \\in \\mathbb{F}_p^*$ nên $g^{x_1}=h_1$ $(mod$ $p)$ và $g^{x_2}=h_2$ $(mod$ $p)$ $\\rightarrow g^{x_1+x_2}=h_1h_2$ $(mod$ $p)$ $\\Rightarrow log_g(g^{x_1+x_2})=log_g(h_1h_2)=x_1+x_2=log_g(h_1)+log_g(h_2)$\n",
+    "\n",
+    "(c) Đặt $x=log_g(h)$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -23,8 +48,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
