--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -31,14 +31,18 @@
     "\n",
     "Với $h_1, h_2 \\in \\mathbb{F}_p^*$ nên $g^{x_1}=h_1$ $(mod$ $p)$ và $g^{x_2}=h_2$ $(mod$ $p)$ $\\rightarrow g^{x_1+x_2}=h_1h_2$ $(mod$ $p)$ $\\Rightarrow log_g(g^{x_1+x_2})=log_g(h_1h_2)=x_1+x_2=log_g(h_1)+log_g(h_2)$\n",
     "\n",
-    "(c) Đặt $x=log_g(h)$"
+    "(c) Đặt $x=log_g(h)$ với $h \\in \\mathbb{F}_p^*$ $\\rightarrow g^x=h$ $(mod$ $p)$\n",
+    "\n",
+    "Gọi $n \\in \\mathbb{Z}$ và lấy mũ $n$ cho 2 vế của phương trình đồng dư trên $\\rightarrow g^{nx}=h^n$ $(mod$ $p)$ $\\rightarrow log_g(h^n)=nx=nlog_g(h)$"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### 2.4"
+   ]
   }
  ],
  "metadata": {
