--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -43,6 +43,39 @@
    "source": [
     "#### 2.4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). 7\n",
+      "(b). 11\n",
+      "(c). 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solve_dlp(g, h, p):\n",
+    "    for x in range(0, p):\n",
+    "        if pow(g, x, p) == h: return x\n",
+    "\n",
+    "print('(a). ' + str(solve_dlp(2, 13, 23))) # In ra kết quả câu a\n",
+    "print('(b). ' + str(solve_dlp(10, 22, 47))) # In ra kết quả câu b\n",
+    "print('(c). ' + str(solve_dlp(627, 608, 941))) # In ra kết quả câu c"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.6"
+   ]
   }
  ],
  "metadata": {
